# django-pybo

./: .gitignore  Dockerfile  README.md  env-template  pyproject.toml  requirements.txt
common/: views.py
config/: settings.py  urls.py
pybo/: admin.py  forms.py  models.py  urls.py  views.py
pybo/migrations/: 0001_initial.py  0002_question_author.py  0003_answer_author.py  0004_answer_modify_date_question_modify_date.py  0005_question_voter_alter_question_author.py  0006_answer_voter.py
pybo/templatetags/: pybo_filter.py
pybo/views/: answer_views.py  base_views.py  question_views.py  views.py
template/static_src/: package-lock.json
templates/: base.html  navbar.html
templates/common/: login.html
templates/pybo/: answer_form.html  question_detail.html  question_form.html  question_list.html
theme/: apps.py
theme/static_src/: package-lock.json  package.json
theme/templates/: base.html  navbar.html
theme/templates/common/: login.html  signup.html
theme/templates/pybo/: question_form.html
