[tool.poetry]
name = "django-pybo"
version = "0.1.0"
description = ""
authors = ["Juil Park <ju4756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
tzdata = "^2023.3"
markdown = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
